refactor: text box style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -509,7 +509,8 @@
                                                 style="font-weight: bold; color: deepskyblue;">+{{dataItems.length - multiSelectTagCount}}</span> items</span>
                                     </ng-template>
                                 </mona-multi-select>
-                                <mona-text-box type="text" [inputClass]="['aa', 'bb']" [inputStyle]="{color: 'coral', fontWeight: 'bold'}"></mona-text-box>
+                                <mona-text-box type="text" [inputClass]="['aa', 'bb']" [inputStyle]="{color: 'coral', fontWeight: 'bold'}"
+                                               style="width: 200px;"></mona-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; margin-top: 40px;">
