--- a/projects/mona-ui/src/lib/inputs/switch/components/switch/switch.component.html
+++ b/projects/mona-ui/src/lib/inputs/switch/components/switch/switch.component.html
@@ -1,16 +1,22 @@
-<div class="mona-switch" [ngClass]="{'mona-switch-active': active, 'mona-disabled': disabled}" (click)="toggle($event)">
-    <span class="mona-switch-label mona-switch-on">
-        <span *ngIf="active && !onLabelTemplate" @fadeInOut>{{labelOn}}</span>
-        <span *ngIf="active && onLabelTemplate" @fadeInOut>
+<span class="mona-switch-label mona-switch-on">
+    @if (active() && !onLabelTemplate) {
+        <span @fadeInOut>{{labelOn()}}</span>
+    }
+    @if (active() && onLabelTemplate) {
+        <span @fadeInOut>
             <ng-template [ngTemplateOutlet]="onLabelTemplate"></ng-template>
         </span>
-    </span>
-    <span class="mona-switch-label mona-switch-off">
-        <span *ngIf="!active && !offLabelTemplate" @fadeInOut>{{labelOff}}</span>
-        <span *ngIf="!active && offLabelTemplate" @fadeInOut>
+    }
+</span>
+<span class="mona-switch-label mona-switch-off">
+    @if (!active() && !offLabelTemplate) {
+        <span @fadeInOut>{{labelOff()}}</span>
+    }
+    @if (!active() && offLabelTemplate) {
+        <span @fadeInOut>
             <ng-template [ngTemplateOutlet]="offLabelTemplate"></ng-template>
         </span>
-    </span>
-    <span class="mona-switch-handle" [ngClass]="{'mona-switch-on': active, 'mona-switch-off': !active}"
-          [attr.tabindex]="disabled?-1:0"></span>
-</div>
+    }
+</span>
+<span class="mona-switch-handle" [ngClass]="{'mona-switch-on': active(), 'mona-switch-off': !active()}"
+      [attr.tabindex]="disabled()?-1:0"></span>
