--- a/projects/mona-ui/src/lib/common/filter-input/components/filter-input/filter-input.component.html
+++ b/projects/mona-ui/src/lib/common/filter-input/components/filter-input/filter-input.component.html
@@ -1,12 +1,10 @@
-<div class="mona-filter-input">
-    <mona-text-box [ngModel]="filterText()"
-                   [clearButton]="true"
-                   [placeholder]="filterPlaceholder()"
-                   (ngModelChange)="filter$.next($event)">
-        <ng-template monaTextBoxPrefixTemplate>
-            <div class="mona-filter-input-icon">
-                <fa-icon [icon]="filterIcon"></fa-icon>
-            </div>
-        </ng-template>
-    </mona-text-box>
-</div>
+<mona-text-box [ngModel]="filterText()"
+               [clearButton]="true"
+               [placeholder]="placeholder()"
+               (ngModelChange)="filter$.next($event)">
+    <ng-template monaTextBoxPrefixTemplate>
+        <div class="mona-filter-input-icon">
+            <fa-icon [icon]="filterIcon"></fa-icon>
+        </div>
+    </ng-template>
+</mona-text-box>
