--- a/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
@@ -40,7 +40,7 @@
                      [@nodeExpand]="nodeComponent.expanded()"
                      [@.disabled]="!treeService.animationEnabled() || treeService.filterText().length !== 0">
                     <mona-sub-tree [nodes]="node.children"
-                                   [depth]="subTreeDepth()+1"
+                                   [depth]="depth()+1"
                                    [parent]="node"
                     ></mona-sub-tree>
                 </div>
