--- a/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.scss
+++ b/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.scss
@@ -10,12 +10,12 @@ ul li {
     outline: none;
 }
 
-div.mona-tree-node-container {
+.mona-tree-node-container {
     display: flex;
     align-items: center;
 }
 
-div.mona-tree-node-expander {
+.mona-tree-node-expander {
     width: 24px;
     height: 100%;
     display: flex;
@@ -27,6 +27,6 @@ div.mona-tree-node-expander {
     font-size: 14px;
 }
 
-div.mona-sub-tree-container {
+.mona-sub-tree-container {
     margin-top: 1px;
 }
