--- a/projects/mona-ui/src/lib/common/tree/components/tree-node/tree-node.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/tree-node/tree-node.component.html
@@ -5,7 +5,7 @@
      (click)="onNodeClick($event)" (contextmenu)="onNodeContextMenu($event)" #element>
     @if (treeService.nodeTemplate()) {
         <ng-container [ngTemplateOutlet]="treeService.nodeTemplate()"
-                      [ngTemplateOutletContext]="{$implicit: treeNode()?.data, element: element.parentElement}"></ng-container>
+                      [ngTemplateOutletContext]="{$implicit: node()?.data, element: element.parentElement}"></ng-container>
     } @else {
         <span class="mona-tree-node-text">{{nodeText()}}</span>
     }
