refactor: avatar style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -644,9 +644,9 @@
 
                             </div>
                             <div style="display: flex; align-items: center; justify-content: center;">
-                                <mona-avatar [borderRadius]="sliderValue"
-                                             [customStyles]="{filter: 'drop-shadow(0 0 0.75rem crimson)'}"
-                                             [image]="'https://photos.smugmug.com/photos/i-ZfvdSzh/0/Th/i-ZfvdSzh-Th.png'"></mona-avatar>
+                                <mona-avatar [borderRadius]="0"
+                                             [borderWidth]="0"
+                                             [image]="'https://photos.smugmug.com/photos/i-H9c2ksV/0/FZ3znsG8X4DRgBvxVnBQgGxCcHrfnK4FNTpQVHT68/S/i-H9c2ksV-S.png'"></mona-avatar>
                                 <mona-avatar [borderRadius]="'50%'" [label]="'HL'"></mona-avatar>
                                 <mona-avatar backgroundColor="transparent" [borderWidth]="0">
                                     <fa-icon [icon]="snowflakeIcon" style="color: #95c5cb;"></fa-icon>
