--- a/projects/mona-ui/src/lib/layout/avatar/avatar.component.scss
+++ b/projects/mona-ui/src/lib/layout/avatar/avatar.component.scss
@@ -1,17 +1,4 @@
-div.mona-avatar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-    position: relative;
-    border-radius: var(--mona-border-radius);
-    & img {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-div.mona-avatar-label {
+.mona-avatar-label {
     display: flex;
     align-items: center;
     justify-content: center;
