refactor: expansion panel style updates

--- a/projects/mona-ui/src/lib/layout/expansion-panel/components/expansion-panel/expansion-panel.component.html
+++ b/projects/mona-ui/src/lib/layout/expansion-panel/components/expansion-panel/expansion-panel.component.html
@@ -1,18 +1,25 @@
-<div class="mona-expansion-panel" [ngClass]="{'collapsed': !expanded}">
-    <div class="mona-expansion-panel-header" (click)="expanded=!expanded;">
-        <div class="mona-expansion-panel-header-title">
-            <ng-container *ngIf="!titleTemplate">{{title}}</ng-container>
-            <ng-container [ngTemplateOutlet]="titleTemplate" *ngIf="!!titleTemplate"></ng-container>
-        </div>
-        <div class="mona-expansion-panel-header-actions">
-            <ng-container *ngIf="!actionsTemplate">
-                <fa-icon [icon]="collapseIcon" *ngIf="expanded"></fa-icon>
-                <fa-icon [icon]="expandIcon" *ngIf="!expanded"></fa-icon>
-            </ng-container>
-            <ng-container [ngTemplateOutlet]="actionsTemplate" *ngIf="!!actionsTemplate"></ng-container>
-        </div>
+<div class="mona-expansion-panel-header" (click)="expanded.set(!expanded());">
+    <div class="mona-expansion-panel-header-title">
+        @if (titleTemplate) {
+            <ng-container [ngTemplateOutlet]="titleTemplate"></ng-container>
+        } @else {
+            {{ title() }}
+        }
     </div>
-    <div class="mona-expansion-panel-content" *ngIf="expanded" @slideVertical>
-        <ng-content></ng-content>
+    <div class="mona-expansion-panel-header-actions">
+        @if (actionsTemplate) {
+            <ng-container [ngTemplateOutlet]="actionsTemplate"></ng-container>
+        } @else {
+            @if (expanded()) {
+                <fa-icon [icon]="collapseIcon"></fa-icon>
+            } @else {
+                <fa-icon [icon]="expandIcon"></fa-icon>
+            }
+        }
     </div>
 </div>
+@if (expanded()) {
+    <div class="mona-expansion-panel-content" @slideVertical>
+        <ng-content></ng-content>
+    </div>
+}
