--- a/projects/mona-ui/src/lib/layout/scroll-view/components/scroll-view/scroll-view.component.scss
+++ b/projects/mona-ui/src/lib/layout/scroll-view/components/scroll-view/scroll-view.component.scss
@@ -1,15 +1,4 @@
-:host {
-    display: block;
-}
-
-div.mona-scroll-view {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    outline: none;
-}
-
-div.mona-scroll-view-content {
+.mona-scroll-view-content {
     position: absolute;
     inset: 0;
     overflow-x: hidden;
@@ -17,7 +6,7 @@ div.mona-scroll-view-content {
     -webkit-overflow-scrolling: touch;
 }
 
-ul.mona-scroll-view-list {
+.mona-scroll-view-list {
     position: relative;
     list-style: none;
     height: 100%;
@@ -28,7 +17,7 @@ ul.mona-scroll-view-list {
     }
 }
 
-div.mona-scroll-view-arrow {
+.mona-scroll-view-arrow {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -63,7 +52,7 @@ div.mona-scroll-view-arrow {
     }
 }
 
-div.mona-scroll-view-pager {
+.mona-scroll-view-pager {
     position: absolute;
     left: 0;
     right: 0;
@@ -73,7 +62,7 @@ div.mona-scroll-view-pager {
     justify-content: center;
 }
 
-div.mona-scroll-view-pager-list-wrapper {
+.mona-scroll-view-pager-list-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,7 +70,7 @@ div.mona-scroll-view-pager-list-wrapper {
     overflow: hidden;
 }
 
-ul.mona-scroll-view-pager-list {
+.mona-scroll-view-pager-list {
     display: flex;
     align-items: center;
     list-style: none;
@@ -101,7 +90,7 @@ ul.mona-scroll-view-pager-list {
     }
 }
 
-div.mona-scroll-view-pager-arrow {
+.mona-scroll-view-pager-arrow {
     padding: 10px 8px;
     display: flex;
     align-items: center;
