--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1421,14 +1421,22 @@ button[monaButton].mona-input-button {
 }
 
 /** Scroll View */
-div.mona-scroll-view-arrow {
+.mona-scroll-view {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    outline: none;
+}
+
+.mona-scroll-view-arrow {
     & fa-icon {
         color: white;
         filter: drop-shadow(0 0 15px #000);
     }
 }
 
-div.mona-scroll-view-pager {
+.mona-scroll-view-pager {
     &-dark {
         border-top: 1px solid var(--mona-border-color);
         background-color: hsla(var(--mona-background-base), var(--mona-background-base-lightness), 60%);
@@ -1439,7 +1447,7 @@ div.mona-scroll-view-pager {
     }
 }
 
-ul.mona-scroll-view-pager-list {
+.mona-scroll-view-pager-list {
     & li {
         border: 1px solid var(--mona-border-color);
         background-color: white;
@@ -1449,7 +1457,7 @@ ul.mona-scroll-view-pager-list {
     }
 }
 
-div.mona-scroll-view-pager-arrow {
+.mona-scroll-view-pager-arrow {
     @include font-medium;
     & fa-icon {
         display: flex;
